--- a/src/App.css
+++ b/src/App.css
@@ -1,38 +1,44 @@
-.App {
-  text-align: center;
+.productList {
+    width: 100vw;
+    max-width: 1000px;
+    margin: 0 auto 50px auto;
 }
 
-.App-logo {
-  height: 40vmin;
-  pointer-events: none;
+.productWrap {
+    display: flex;
+    justify-content: space-between;
+    height: 150px;
 }
 
-@media (prefers-reduced-motion: no-preference) {
-  .App-logo {
-    animation: App-logo-spin infinite 20s linear;
-  }
+.productBox {
+    position: relative;
+    border: 1px solid black;
+    width: 150px;
+    cursor: pointer;
 }
 
-.App-header {
-  background-color: #282c34;
-  min-height: 100vh;
-  display: flex;
-  flex-direction: column;
-  align-items: center;
-  justify-content: center;
-  font-size: calc(10px + 2vmin);
-  color: white;
+.productBox > div:nth-of-type(1){
+    width: 100%;
+    position: absolute;
+    top: 50%;
+    left: 50%;
+    transform: translate(-50%, -50%);
+    text-align: center;
 }
 
-.App-link {
-  color: #61dafb;
+.productBox > div:nth-of-type(2){
+    width: 100%;
+    position: absolute;
+    top: 80%;
+    left: 50%;
+    transform: translate(-50%, -50%);
+    text-align: center;
 }
 
-@keyframes App-logo-spin {
-  from {
-    transform: rotate(0deg);
-  }
-  to {
-    transform: rotate(360deg);
-  }
+.cartIn {
+    border-color: gray;
+}
+
+.cartOut {
+    border-color: black;
 }
