--- a/src/App.css
+++ b/src/App.css
@@ -17,6 +17,10 @@
     cursor: pointer;
 }
 
+.cartBox {
+    margin-right: 10px;
+}
+
 .productBox > div:nth-of-type(1){
     width: 100%;
     position: absolute;
@@ -36,7 +40,7 @@
 }
 
 .cartIn {
-    border-color: gray;
+    border-color: #ddd;
 }
 
 .cartOut {
